# stability-rheology_analyst_

./: .gitignore  config.py  firecrawl_smoke_test.py  main.py  mcp_client_test.py  pyproject.toml  queryExemple.jsonl  rheology_assistant_test.py  safety_environment_test.py  stability_rheology_check_test.py  stability_sample.json
agent/: agent.py  agent2.py  prompt.py
backend/: manage.py  mcpServer.py
backend/api/: safety_agent.py  urls.py  views.py
backend/backend/: settings.py
data/experimental_data/: README_rheological_data.txt  README_settling_experiments.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: queryExemple.jsonl
frontend/src/: index.css
frontend/src/components/: AssessmentResults.tsx  ChatLauncher.tsx  ChatPanel.tsx  FormulaBuilder.tsx  FormulaEditor.tsx  FormulaFormFields.tsx  ReportAssistantCard.tsx  ResultsPanel.tsx  TopBar.tsx
frontend/src/hooks/: useAssessment.ts  useFormulaForm.ts
frontend/src/lib/: api.ts  exampleFormula.ts  validation.ts
frontend/src/pages/: Index.tsx
frontend/src/test/: validation.test.ts
frontend/src/types/: api.ts  formula.ts
models/: __init__.py  agent_models.py  formula_schema.py
rag/: ingest.py  migrate_chroma_to_qdrant.py  pdf_parser.py  vectorstore.py
tools/: experimental_bridge_tool.py  experimental_rheology_tool.py  ingredient_lookup_tool.py  pubchem_property_tool.py  rag_tools.py  rdkit_analysis_tool.py  semantic_scholar_tool.py  settling_analysis_tool.py  web_tools.py
(+430 files in other folders)
