[project]
name = "agent-rheology-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain>=0.3.20,<0.4.0",
    "langchain-community>=0.3.20,<0.4.0",
    "langchain-openai>=0.3.7,<0.4.0",
    "langchain-qdrant>=0.2.1,<0.3.0",
    "matplotlib==3.9.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pdfplumber==0.11.4",
    "pypdf==4.2.0",
    "qdrant-client>=1.11.0,<2.0.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.0",
    "rdkit-pypi>=2022.9.5",
    "serpapi==0.1.5",
    "streamlit>=1.55.0",
    "django>=5.2.12",
]
